# yap-editor

./: .gitignore  AGENTS.md  README.md  logo-explorations.html  middleware.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/actions/: auth.ts
app/api/detect-face/: route.ts
app/api/eval/: route.ts
app/api/export/: route.ts
app/api/finalize/: route.ts
app/api/judge/: route.ts
app/api/migrate-projects/: route.ts
app/api/projects/: route.ts
app/api/refine/: route.ts
app/api/remux/: route.ts
app/api/save-fixture/: route.ts
app/auth/: page.tsx
app/eval/: page.tsx
app/projects/: page.tsx
components/: AuthWrapper.tsx  ExportPanel.tsx  HeaderAuth.tsx  ThumbnailStudio.tsx  TranscriptEditor.tsx  UploadStage.tsx  UserMenu.tsx  VideoTimeline.tsx
components/auth/: GoogleButton.tsx
docs/: tighten-baseline.md  tighten-rewrite-plan.md
electron/: main.js  preload.js
lib/: authContext.tsx  editPlan.ts  judge-handler.ts  refine-handler.ts  replan-handler.ts  supabase.ts  transcriptDiff.ts
migrations/: 01_init_schema.sql
scripts/: analyze.py  continuity.py  detect_face.py  enhance.py  eval.py  eval_audio.py  eval_cuts.py  eval_judge.py  eval_segments.py  eval_thumbnails.py  filler.py  gen-icon.js  judge_plan.py  linter.py  llm.py  orchestrator.py  patch_fixture.py  refine.py  replan.py  rhythmist.py  segment.py  suggest_overlay_duration.py  surgeon.py  test_narrative.py  thumbnail.py  thumbnail_agent.py  tighten.py  transcribe.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
(+12 files in other folders)
