[project]
name = "transcript-editor-py"
version = "0.1.0"
description = "MLX-Whisper transcription scripts"
authors = [
    {name = "n"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "opencv-python>=4.9.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "rembg[cpu]>=2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
